tests/sksl/errors/Ossfuzz27663.glsl
### Compilation failed:

error: 1: type mismatch: '=' cannot operate on 'half4', 'float4'
1 error
